--- a/utterances.html
+++ b/utterances.html
@@ -4,12 +4,10 @@
       return;
     }
 
-    var articleTitle = document.querySelector('meta[property="og:title"').content;
-
     var script = document.createElement("script");
     script.src = "https://utteranc.es/client.js";
     script.setAttribute("repo", "milesmcbain/milesmcbain.com");
-    script.setAttribute("issue-term", articleTitle);
+    script.setAttribute("issue-term", "og:title");
     script.setAttribute("crossorigin", "anonymous");
 
     /* wait for article to load, append script to article element */
